# webnative

./: .README.md  .gitignore  CMakeLists.txt  README.md  build.sh  index.html  main.js  package-lock.json  package.json  run.sh
include/: app.h  webApp.h  webFrame.h
src/: app.cpp  main.cpp
usr/share/applications/: whatsapp-electron.desktop
